--- a/applications/pip_target/views/default/index.html
+++ b/applications/pip_target/views/default/index.html
@@ -1,25 +1,29 @@
 {{extend 'layout.html'}}
 
-{{if 'message' in globals():}}{{=H2(message)}}{{else:}}{{=BEAUTIFY(response._vars)}}{{pass}}
+<div id="targets">
+{{ for target in targets: }}
+  <div id="graph{{=target.id}}">
+    {{=BEAUTIFY(target)}}
+  </div>
+  
+  <form id="form{{=target.id}}">
+    <input id="input{{=target.id}}"/>
+  </form>
 
-<hr />
-<h1>README</h1>
-<ul>
-  <li>{{=T('You are successfully running web2py')}}</li>
-  <li>{{=T('This is a copy of the scaffolding application')}}</li>
-  <li>{{=T('You can modify this application and adapt it to your needs')}}</li>
-  <li>{{=A(B(T("click here for the administrative interface")), _href=URL('admin','default','index'))}}</li>
-  <li>{{=A(T("click here for online examples"), _href=URL('examples','default','index'))}}</li>
-  <li><a href="http://web2py.com">web2py.com</a></li>
-  <li><a href="http://web2py.com/book">{{=T('documentation')}}</a></li>
-</ul>
+  <script type="text/javascript"> 
+  $('#form{{=target.id}}').submit(function() {
+      $.ajax({
+            type: "POST",
+            url: "/{{=request.application}}/default/target",
+            data: "value=" + $('#input{{=target.id}}').val() + "&id={{=target.id}}",
+            success: function(html){
+              $("#graph{{=target.id}}").html(html);
+            }
+      });
+      return false;
+  })
+  </script> 
 
-<ol>
-  <li>{{=T('You visited the url')}} {{=A(request.env.path_info,_href=request.env.path_info)}}</li>
-  <li>{{=T('Which called the function')}} {{=A(request.function+'()',_href='#')}} {{=T('located in the file')}}
-    {{=A('web2py/applications/%(application)s/controllers/%(controller)s.py'%request,_href=URL('admin','default','peek',args=(request.application,'controllers',request.controller+'.py')))}}</li>
-  <li>{{=T('The output of the file is a dictionary that was rendered by the view')}}
-    {{=A('web2py/applications/%(application)s/views/%(controller)s/index.html'%request,_href=URL('admin','default','peek',args=(request.application,'views',request.controller,'index.html')))}}</li>
-</ol>
-
+{{pass}}
+</div>
 
